Fixed an issue where the standard custom mode would not work if you selected a number of cards less than 9. Now anything above the min works and separates well on mobiles and pc

--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,11 @@ body {
 @media only screen and (max-aspect-ratio: 9/15){ 
     .gameLimitNumberInput {
         width: 10%;
-        font-size: 3vh;
+        height: 3.3vh;
+        font-size: 2.5vh;
     }
     .startGameButton {
-        font-size: 3vh;
+        font-size: 2.5vh;
     }
 }
 
@@ -165,7 +166,7 @@ body {
 @media only screen and (min-aspect-ratio: 9/15) and (max-aspect-ratio: 1/1){
     .gameLimitNumberInput {
         width: 10%;
-        font-size: 3vh;
+        font-size: 2.5vh;
     }
     .startGameButton {
         font-size: 3vh;
@@ -241,10 +242,18 @@ body {
 
 .enterModeSelectButton:hover{
     background-color: rgb(177, 174, 174);
-    transform: scale(1.1, 1.1);
     border: none;
-    font-size: 1.05em;
     transition: all 0.2s ease-in-out;
+}
+
+@media only screen and (min-aspect-ratio: 1){
+    .enterModeSelectButton:hover{
+        background-color: rgb(177, 174, 174);
+        transform: scale(1.1, 1.1);
+        border: none;
+        font-size: 1.05em;
+        transition: all 0.2s ease-in-out;
+    }
 }
 
 .enterModeSelectButton:active {
