--- a/src/components/GameModes.module.css
+++ b/src/components/GameModes.module.css
@@ -44,3 +44,13 @@
 @media only screen and (min-aspect-ratio: 9/15) and (max-aspect-ratio: 1/1){
 
 }
+
+.difficultyText {
+    font-size: 2.2vh;
+}
+
+.inputAndButtonHolder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
